--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,9 @@ text-align: center;
     margin-top: 30px;
     color: #cccccc;
 }
+
+
+.connect-img:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
