--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ z-index: 999;
 }
 
 
-/* media queries for the banners infront of project col*/
+/* media queries for the stupid ;) banners infront of each project on portfolio side */
 @media screen and (max-width: 1200px){
     .banner {
         width: 90.5%;
